# OMNI

./: .gitignore  AGENTS.md  Cargo.toml  LEARNED.md  Makefile  README.md  buf.gen.yaml  docker-compose.yml  package-lock.json  package.json  start-api-background.ps1  start-api.ps1  stop-api.ps1  test-api.ps1  tsconfig.base.json
.github/workflows/: ci.yml
crates/blockchain-audit/: Cargo.toml
crates/blockchain-audit/src/: main.rs
crates/omni-box-fw/: Cargo.toml
crates/omni-box-fw/src/: jni_bridge.rs  lib.rs  main.rs  protocol.rs  safety.rs  shadow.rs
crates/omni-box-fw/src/drivers/: can.rs  iec61850.rs  mod.rs  modbus.rs
crates/omni-box-fw/tests/: integration.rs
crates/omni-cloud/: Cargo.toml  build.rs
crates/omni-cloud/src/: main.rs
crates/pde-kernel/: Cargo.toml
crates/pde-kernel/benches/: optimizer_bench.rs
crates/pde-kernel/src/: main.rs  optimizer.rs  types.rs
deploy/: kong.yml
deploy/k8s/base/: asset-manager-deployment.yaml  kustomization.yaml  namespace.yaml  nats-deployment.yaml  omni-cloud-deployment.yaml  pde-engine-deployment.yaml  pde-engine-service.yaml
deploy/terraform/: main.tf  outputs.tf
docs/: BRAZILIAN_ENERGY_MARKET_RESEARCH.md  OMNI_GRID_CONSOLIDATED_SPECIFICATION.md  OMNI_GRID_MASTER_BLUEPRINT.md  OMNI_GRID_ULTIMATUM_PROTOCOL.md  PITCH_PARA_INVESTIDOR.md
docs/api/: openapi.yaml
docs/pitch/: OMNI-GRID-Pitch-Deck.pptx  generate-pdf.mjs  generate-pptx.mjs  pitch.html
edge/: EDGE_PLAN.md
edge/android-app/: build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
edge/android-app/app/: build.gradle.kts
edge/android-app/app/src/main/: AndroidManifest.xml
edge/android-app/app/src/main/assets/: device.key
edge/android-app/app/src/main/res/drawable/: ic_omni_box_foreground.xml
edge/android-app/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
edge/android-app/app/src/main/res/raw/: ca
edge/android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
edge/android-app/app/src/main/res/xml/: network_security_config.xml  usb_device_filter.xml
edge/dashboard/: README.md  index.html  manifest.json  sw.js
edge/esp-co-proc/: .clang-format  .clang-tidy  platformio.ini
edge/esp-co-proc/include/: config.h  tasks.h
edge/esp-co-proc/src/: ble_bms_scanner.cpp  ble_gatt_server.cpp  can_task.cpp  hw_watchdog.cpp  iec61850_sv.cpp  main.cpp  modbus_task.cpp  modbus_tcp.cpp  ota_task.cpp  safety_task.cpp  shadow_task.cpp  wifi_ap.cpp
edge/esp-co-proc/test/: test_can.cpp  test_modbus.cpp  test_safety.cpp
edge/omni-box-simulator/: Dockerfile  main.py  package.json
edge/omni-box-simulator/src/: index.ts
edge/omni-box-simulator/test/: simulator.test.ts
logs/: children.json
proto/asset/v1/: asset.proto
proto/common/v1/: common.proto
proto/edge/v1/: edge.proto
proto/pde/v1/: pde.proto
scripts/: gen-certs.ps1  gen-edge-certs.ps1  gen-edge-certs.py  gen-edge-certs.sh  migrate.sh  orchestrator.mjs  seed.sh
services/asset-manager/: Dockerfile  go.mod
services/asset-manager/cmd/: main.go
services/asset-manager/internal/: db.go  models.go
services/asset-manager/migrations/: 001_initial.sql
services/market-connect/: Dockerfile  go.mod
services/market-connect/cmd/: main.go
services/pde-engine/: Dockerfile  pyproject.toml
services/pde-engine/api/: app.py  routes.py
services/pde-engine/pde/core/: dispatch.py  forecast.py  optimizer.py
services/pde-engine/pde/infrastructure/: market.py  telemetry.py
services/pde-engine/tests/: test_dispatch.py  test_forecast.py  test_optimizer.py
(+27 files in other folders)
