[package]
name = "blockchain-audit"
version = "1.0.0"
edition = "2024"
description = "Omni-Grid Blockchain Audit Trail — immutable dispatch logging (Hyperledger chaincode pattern)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.14", features = ["v4"] }
tracing = "0.1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
