[package]
name = "omni-cloud"
version = "1.0.0"
edition = "2024"
description = "Omni-Grid Edge Gateway — critical infrastructure service (gRPC, mTLS, telemetry, dispatch)"

[[bin]]
name = "omni-cloud"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats = "0.38"
uuid = { version = "1.14", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.23"
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
x509-parser = "0.17"
sha2 = "0.10"
hex = "0.4"
arc-swap = "1.7"
dashmap = "6.1"
thiserror = "2"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
