[tool.poetry]
name = "pde-engine"
version = "0.1.0"
description = "Omni-Grid Predictive Dispatch Engine"
authors = ["JARBAS <jarbas@omni-grid.io>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.32"
torch = "^2.5"
pandas = "^2.2"
numpy = "^2.1"
grpcio = "^1.68"
protobuf = "^5.29"
nats-py = "^2.9"
redis = "^5.2"
asyncpg = "^0.30"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.9"
httpx = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
